Bug 13213 - Samba build is not reproducible
Summary: Samba build is not reproducible
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.7.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-12 08:41 UTC by Andreas Schneider
Modified: 2024-06-19 14:35 UTC (History)
2 users (show)

See Also:


Attachments
patch for Samba 4.20 (16.72 KB, patch)
2024-06-04 01:03 UTC, Andrew Bartlett
no flags Details
patch for 4.20 (v2) (11.91 KB, patch)
2024-06-05 03:01 UTC, Douglas Bagnall
abartlet: review+
Details
patches for 4.17 (12.02 KB, patch)
2024-06-05 03:04 UTC, Douglas Bagnall
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2018-01-12 08:41:31 UTC
Samba build is not reproducible because we include 'uname -a' information as a string.
Comment 1 Samba QA Contact 2024-05-31 01:29:05 UTC
This bug was referenced in samba master:

f3433f60b8ee83fc785a6e6838513de31bff5a6a
068b366709d005275727a0e8929d272c04cb7bd8
e604f7575167d3572e1b67c6e77ab7273508533d
3a7dbf8b77b2a9e7cdc55bc5b339b9f501d037aa
Comment 2 Andrew Bartlett 2024-06-04 01:03:32 UTC
Created attachment 18318 [details]
patch for Samba 4.20
Comment 3 Douglas Bagnall 2024-06-05 03:01:11 UTC
Created attachment 18321 [details]
patch for 4.20 (v2)

The MR had 7 patches in it, but 3 of them were changing things not essential for build reproducibility, so I left out the BUG number. But they were tangled up in the fix patches so they got included.

This patchset has the 4 essential patches.

I have tested repeated builds are identical on 4.20, with both `configure` and `configure.developer`.

The same patches also apply to 4.19 and 4.18.
Comment 4 Douglas Bagnall 2024-06-05 03:04:40 UTC
Created attachment 18322 [details]
patches for 4.17

4.17 patch included in case there is interest.
Comment 5 Douglas Bagnall 2024-06-07 00:56:02 UTC
This is for 4.20.
Comment 6 Jule Anger 2024-06-10 13:19:35 UTC
Pushed to autobuild-v4-20-test.
Comment 7 Samba QA Contact 2024-06-10 14:44:05 UTC
This bug was referenced in samba v4-20-test:

eb480df1baf2efdee1fd9b79e1548b17dc7a82db
e7c132a4a2cc3ff2803aff03f94e98615eb4e185
b1173444ff88a81cc6d72d1eb124e76022b771bc
e2191933876aab52bd039a7150d88e80df7aaac7
Comment 8 Jule Anger 2024-06-10 14:47:33 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-06-19 14:35:23 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.2):

eb480df1baf2efdee1fd9b79e1548b17dc7a82db
e7c132a4a2cc3ff2803aff03f94e98615eb4e185
b1173444ff88a81cc6d72d1eb124e76022b771bc
e2191933876aab52bd039a7150d88e80df7aaac7